<resources>
    <string name="app_name">KD-Covid</string>
    <string name="dsc_logo_image">Logo oficial do KD-Covid</string>
    <string name="dsc_logo_janauba">Logo oficial da Prefeitura de Janaúba</string>
    <string name="dsc_logo_salinas">Logo oficial da Prefeitura de Salinas</string>
    <string name="dsc_logo_ifnmg">Logo oficial do IFNMG</string>
    <string name="welcome_msg">Olá, bem-vindo(a) ao <b>KD-Covid</b>! \n\nEste aplicativo tem
        a intenção de acompanhar e monitorar os casos de COVID-19 na nossa região,
        principalmente nas cidades de Salinas e Janaúba. Para nos ajudar a
        construir essa rede segura de informações, é simples: responda ao
        questionário a seguir, relatando o seu estado de saúde atual.
        As respostas geradas com este aplicativo fornecerão dados para
        o mapeamento dos casos e posteriores ações. A detecção prévia de
        casos pode promover um melhor acesso aos testes e serviços de saúde.
        \n\nEstamos com você!</string>
    <string name="with_support_msg">Com o apoio de</string>
    <string name="next_lbl">Próxima</string>
    <string name="iagree_lbl">Eu concordo</string>
    <string name="feeling_msg">Como você está se sentindo?</string>
    <string name="nosymptom_msg"> Bem, não sinto nenhum tipo de sintoma</string>
    <string name="yessymptom_msg"> Sinto algum sintoma ou incômodo</string>
    <string name="warning_feeling_msg">Obs: clique nesta opção se estiver sentindo qualquer tipo de sintoma, mesmo tosse ou nariz escorrendo</string>
    <string name="tell_symptoms_lbl">Quais sintomas você tem sentido?</string>
    <string name="fever_lbl">Febre</string>
    <string name="running_nose_lbl">Nariz escorrendo (coriza)</string>
    <string name="tiredness_lbl">Cansaço</string>
    <string name="purple_mouth_lbl">Cor azulada/roxa na boca ou rosto</string>
    <string name="cough_lbl">Tosse ou espirro</string>
    <string name="breath_problem_lbl">Dificuldade de respirar</string>
    <string name="sore_throat_lbl">Dor de garganta</string>
    <string name="chest_pressure_lbl">Pressão no peito</string>
    <string name="noa_lbl">Nenhum destes</string>
    <string name="symptoms_duration_lbl">Há quanto tempo você se sente assim?</string>
    <string name="one_to_three_days_lbl">1 a 3 Dias</string>
    <string name="four_to_seven_days_lbl">4 a 7 Dias</string>
    <string name="eight_to_ten_days_lbl">8 a 10 Dias</string>
    <string name="eleven_to_fourteen_days_lbl">11 a 14 Dias</string>
    <string name="fourteen_plus_days_lbl">Mais de 14 Dias</string>
    <string name="last_14days_lbl">Nos últimos 14 dias você:</string>
    <string name="went_outof_city_lbl">Viajou para fora da sua cidade</string>
    <string name="contact_with_outsider_lbl">Teve contato com alguém que chegou de fora da cidade</string>
    <string name="contact_with_infected_lbl">Teve contato com alguém infectado por Covid-19</string>
    <string name="feel_sth_lbl">Sinto algum sintoma</string>
    <string name="feel_ok_lbl">Sinto-me bem!</string>
    <string name="age_range_lbl">Assinale sua faixa etária (idade)</string>
    <string name="one_to_fifteen_years_lbl">1 a 15 Anos</string>
    <string name="sixteen_to_thirty_years_lbl">16 a 30 Anos</string>
    <string name="thirtyone_to_fortyfive_years_lbl">31 a 45 Anos</string>
    <string name="fortysix_to_sixty_years_lbl">46 a 60 Anos</string>
    <string name="sixty_plus_years_lbl">Mais de 60 Anos</string>
    <string name="prior_diseases_lbl">Possui alguma dessas doenças?</string>
    <string name="diabetes_lbl">Diabetes</string>
    <string name="heart_problem_lbl">Doença do coração</string>
    <string name="chronic_kidney_lbl">Doença renal crônica</string>
    <string name="chronic_respiratory_lbl">Doença respiratória crônica (asma, bronquite, etc)</string>
    <string name="high_pressure_lbl">Pressão alta</string>
    <string name="cancer_lbl">Câncer</string>
    <string name="dont_have_lbl">Não possuo</string>
    <string name="dwa_lbl">Não quero responder</string>
    <string name="gender_lbl">Qual o seu sexo?</string>
    <string name="male_lbl">Masculino</string>
    <string name="female_lbl">Feminino</string>
    <string name="other_gender_lbl">Outro</string>
    <string name="city_lbl">Qual cidade você mora?</string>
    <string name="salinas_lbl">Salinas</string>
    <string name="aracuai_lbl">Araçuai</string>
    <string name="taiobeiras_lbl">Taiobeiras</string>
    <string name="coronel_murta_lbl">Coronel Murta</string>
    <string name="sao_joao_do_paraiso_lbl">São João do Paraíso</string>
    <string name="janauba_lbl">Janaúba</string>
    <string name="porteirinha_lbl">Porteirinha</string>
    <string name="montes_claros_lbl">Montes Claros</string>
    <string name="other_city_lbl">Outra</string>
    <string name="neighborhood_salinas_lbl">Selecione seu bairro em Salinas</string>
    <string name="neighborhood_janauba_lbl">Selecione seu bairro em Janaúba</string>
    <string name="zip_code_lbl">Informe aqui o seu CEP</string>
    <string name="full_name_lbl">Qual o seu nome completo?</string>
    <string name="fill_lbl">Preencher</string>
    <string name="hint_full_name_lbl">Informe aqui o seu nome</string>
    <string name="phone_lbl">Qual o seu telefone?</string>
    <string name="hint_phone_lbl">Informe aqui seu telefone</string>
    <string name="result_lbl">Relatório Preliminar</string>
    <string name="result_low_risk1_msg">Baseado em suas respostas, é
        provável que você não se encaixe como caso suspeito de Covid-19.
        \n\nNo entanto, continue mantendo as condutas de prevenção, como:
        \n- Higienize sempre as mãos com água e sabão ou álcool gel;
        \n- Permaneça em isolamento social;
        \n- Use máscara;
        \n- Evite tocar nos olhos, nariz e boca com as mãos não higienizadas;
        \n- Não compartilhe objetos de uso pessoal.
        \n\nCaso a sua situação mude, refaça o questionário.</string>
    <string name="result_low_risk2_msg">Baseado em suas respostas, é
        provável que você não se encaixe como caso suspeito de Covid-19.
        \n\nNo entanto, continue mantendo as condutas de prevenção, como:
        \n- Higienize sempre as mãos com água e sabão ou álcool gel;
        \n- Permaneça em isolamento social;
        \n- Use máscara;
        \n- Evite tocar nos olhos, nariz e boca com as mãos não higienizadas;
        \n- Não compartilhe objetos de uso pessoal.
        \n\nCaso a sua situação mude, refaça o questionário.</string>
    <string name="result_medium_risk3_msg">Baseado em suas respostas,
        é possível que você se encaixe como caso suspeito de Covid-19.
        No entanto, isso não se trata de um diagnóstico.
        O ideal é que você busque a unidade básica de saúde mais próxima e
        reforce as medidas de proteção, como:
        \n- Higienize sempre as mãos com água e sabão ou álcool em gel;
        \n- Permaneça em isolamento social;
        \n- Use máscara;
        \n- Evite tocar nos olhos, nariz e boca com as mãos não higienizadas;
        \n- Não compartilhe objetos de uso pessoal.
        \n\nNos próximos dias, a equipe do KD-Covid poderá entrar em contato!</string>
    <string name="result_medium_risk4_msg">Baseado em suas respostas,
        é possível que você se encaixe como caso suspeito de Covid-19.
        No entanto, isso não se trata de um diagnóstico.
        O ideal é que você busque a unidade básica de saúde mais próxima e
        reforce as medidas de proteção, como:
        \n- Higienize sempre as mãos com água e sabão ou álcool em gel;
        \n- Permaneça em isolamento social;
        \n- Use máscara;
        \n- Evite tocar nos olhos, nariz e boca com as mãos não higienizadas;
        \n- Não compartilhe objetos de uso pessoal.
        \n\nNos próximos dias, a equipe do KD-Covid poderá entrar em contato!</string>
    <string name="result_high_risk5_msg">Baseado em suas respostas,
        é possível que você se encaixe como caso suspeito de Covid-19.
        No entanto, isso não se trata de um diagnóstico.
        O ideal é que você busque a unidade básica de saúde mais próxima e
        reforce as medidas de proteção, como:
        \n- Higienize sempre as mãos com água e sabão ou álcool em gel;
        \n- Permaneça em isolamento social;
        \n- Use máscara;
        \n- Evite tocar nos olhos, nariz e boca com as mãos não higienizadas;
        \n- Não compartilhe objetos de uso pessoal.
        \n\nCaso persistirem os sintomas, procure a unidade básica de saúde
        mais próxima.
        \n\nNos próximos dias, a equipe do KD-Covid
        poderá entrar em contato com você!</string>
    <string name="result_high_risk6_msg">Baseado em suas respostas,
        é possível que você se encaixe como caso suspeito de Covid-19.
        No entanto, isso não se trata de um diagnóstico.
        O ideal é que você busque a unidade básica de saúde mais próxima e
        reforce as medidas de proteção, como:
        \n- Higienize sempre as mãos com água e sabão ou álcool em gel;
        \n- Permaneça em isolamento social;
        \n- Use máscara;
        \n- Evite tocar nos olhos, nariz e boca com as mãos não higienizadas;
        \n- Não compartilhe objetos de uso pessoal.
        \n\nCaso persistirem os sintomas, procure a unidade básica de saúde
        mais próxima.
        \n\nNos próximos dias, a equipe do KD-Covid
        poderá entrar em contato com você!</string>
    <string name="result_very_high_risk7_msg">Baseado em suas respostas,
        é possível que você se encaixe como caso suspeito de Covid-19.
        No entanto, isso não se trata de um diagnóstico.
        O ideal é que você busque a unidade básica de saúde mais próxima e
        reforce as medidas de proteção, como:
        \n- Higienize sempre as mãos com água e sabão ou álcool em gel;
        \n- Permaneça em isolamento social;
        \n- Use máscara;
        \n- Evite tocar nos olhos, nariz e boca com as mãos não higienizadas;
        \n- Não compartilhe objetos de uso pessoal.
        \n\nCaso persistirem os sintomas, procure a unidade básica de saúde
        mais próxima.
        \n\nNos próximos dias, a equipe do KD-Covid
        poderá entrar em contato com você!</string>
    <string name="lbl_result_low_risk">Risco Baixo</string>
    <string name="lbl_result_medium_risk">Risco Médio</string>
    <string name="lbl_result_high_risk">Atenção</string>
    <string name="lbl_go_home">Voltar para o início</string>
    <string name="lbl_smell_taste_loss">Perda de olfato ou paladar</string>
    <string name="lbl_phone_or_email">Para finalizar, informe seu telefone e/ou email de contato</string>
    <string name="lbl_enter_phone">Informe aqui seu telefone</string>
    <string name="lbl_enter_email">Informe aqui seu email</string>
    <string name="cell_phone_mask">(NN)NNNNN-NNNN</string>
    <string name="zip_code_mask">NNNNN-NNN</string>
    <string name="err_invalid_zip_code">Favor informar um CEP VÁLIDO!</string>
    <string name="err_select_atleast_one_answer">Favor selecionar pelo menos uma resposta!</string>
    <string name="err_select_atleast_one_zipcode">Favor informar o CEP!</string>
    <string name="err_select_atleast_one_city">Favor selecionar pelo menos uma cidade!</string>
    <string name="err_select_atleast_one_neighborhood">Favor selecionar seu bairro!</string>
    <string name="err_invalid_phone">Favor informar um telefone VÁLIDO!</string>
    <string name="err_invalid_email">Favor informar um email VÁLIDO!</string>
    <string name="err_nophone_noremail">Favor informar telefone e/ou email!</string>
    <string name="err_generate_json">Erro ao preparar dados! Tente novamente em alguns instantes!</string>
    <string name="err_execute_db_operation">Ocorreu um erro de comunicação! Tente novamente em alguns instantes!</string>
    <string name="err_db_record_exists">Registro já foi feito! Deve-se esperar no mínimo dois dias de intervalo!</string>
</resources>