<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20sp"
        tools:context=".activity.PriorDiseasesActivity">

        <include layout="@layout/header_logo" />

        <TextView
            android:id="@+id/tvHeaderPriorDiseases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30sp"
            android:text="@string/feel_sth_lbl"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvPriorDiseases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="5sp"
            android:text="@string/prior_diseases_lbl"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/chkDiabetes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:text="@string/diabetes_lbl"
            android:textSize="23sp" />

        <CheckBox
            android:id="@+id/chkHeartProblem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:text="@string/heart_problem_lbl"
            android:textSize="23sp" />

        <CheckBox
            android:id="@+id/chkChronicKidney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:text="@string/chronic_kidney_lbl"
            android:textSize="23sp" />

        <CheckBox
            android:id="@+id/chkChronicRespiratory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:text="@string/chronic_respiratory_lbl"
            android:textSize="23sp" />

        <CheckBox
            android:id="@+id/chkHighPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:text="@string/high_pressure_lbl"
            android:textSize="23sp" />

        <CheckBox
            android:id="@+id/chkCancer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:text="@string/cancer_lbl"
            android:textSize="23sp" />

        <CheckBox
            android:id="@+id/chkDontHavePriorDisease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:text="@string/dont_have_lbl"
            android:textSize="23sp" />

        <CheckBox
            android:id="@+id/chkPriorDiseaseDWA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:text="@string/dwa_lbl"
            android:textSize="23sp" />

        <Button
            android:id="@+id/btnPriorDiseasesNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25sp"
            android:background="@drawable/rounded_button"
            android:onClick="onclickBtnPriorDiseasesNext"
            android:padding="16dp"
            android:text="@string/next_lbl"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>