<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20sp"
        tools:context=".activity.GenderActivity">

        <TextView
            android:id="@+id/tvGenderAppName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:drawableStart="@drawable/logo_drawable_attr"
            android:drawablePadding="5sp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHeaderFeelOkGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30sp"
            android:text="@string/feel_ok_lbl"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvHeaderGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30sp"
            android:text="@string/feel_sth_lbl"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="5sp"
            android:text="@string/gender_lbl"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rdgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdbMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:text="@string/male_lbl"
                android:textSize="23sp" />

            <RadioButton
                android:id="@+id/rdbFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:text="@string/female_lbl"
                android:textSize="23sp" />

            <RadioButton
                android:id="@+id/rdbOtherGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:text="@string/other_gender_lbl"
                android:textSize="23sp" />

        </RadioGroup>

        <Button
            android:id="@+id/btnGenderNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30sp"
            android:background="@drawable/rounded_button"
            android:onClick="onclickBtnGenderNext"
            android:padding="16dp"
            android:text="@string/next_lbl"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>