<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20sp"
        tools:context=".activity.Last14DaysActivity">

        <include layout="@layout/header_logo" />

        <TextView
            android:id="@+id/tvHeaderFeelOkLast14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30sp"
            android:text="@string/feel_ok_lbl"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvHeaderLast14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30sp"
            android:text="@string/feel_sth_lbl"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvLast14Days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="5sp"
            android:text="@string/last_14days_lbl"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/chkWentOutOfCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:text="@string/went_outof_city_lbl"
            android:textSize="23sp" />

        <CheckBox
            android:id="@+id/chkContactWithOutsider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:text="@string/contact_with_outsider_lbl"
            android:textSize="23sp" />

        <CheckBox
            android:id="@+id/chkContactWithInfected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:text="@string/contact_with_infected_lbl"
            android:textSize="23sp" />

        <CheckBox
            android:id="@+id/chkLast14DaysNOA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/noa_lbl"
            android:textSize="23sp" />

        <Button
            android:id="@+id/btnLast14DaysNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:onClick="onclickBtnLast14DaysNext"
            android:padding="16dp"
            android:text="@string/next_lbl"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivJanaubaLogo"
            app:layout_constraintVertical_bias="0.067" />

    </LinearLayout>

</ScrollView>