<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context=".activity.FeelingActivity">

    <include layout="@layout/header_logo_api21" />

    <TextView
        android:id="@+id/tvFeeling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:paddingStart="10sp"
        android:paddingTop="5sp"
        android:paddingEnd="10sp"
        android:paddingBottom="5sp"
        android:text="@string/feeling_msg"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rdgFeeling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/rdbNoSymptom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/nosymptom_msg"
            android:textSize="19sp" />

        <RadioButton
            android:id="@+id/rdbYesSymptom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/yessymptom_msg"
            android:textSize="19sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btnFeelingNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:padding="16dp"
        android:text="@string/next_lbl"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>